correct bug : scrollable page on mobile device

--- a/assets/styles/_general.scss
+++ b/assets/styles/_general.scss
@@ -49,6 +49,7 @@ button{
 }
 
 .btn{
+    text-align: center;
     color: $thirdColor;
     border: 2px solid $primaryColor;
     padding: 4px 15px;
